fix: spacing between announcements and trending section

--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -149,7 +149,7 @@ svg {
   background-color: var(--main-bg-color);
   display: grid;
   gap: 2rem;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-columns: 3fr 1fr;
   grid-template-areas: 
     "projects announcements"
